force-app/main/default/objects/Object_Field_Config__mdt/Object_Field_Config__mdt.object-meta.xml
<CustomObject>
    <label>Object Field Config</label>
    <pluralLabel>Object Field Configs</pluralLabel>
</CustomObject>