force-app/main/default/objects/Object_Field_Config__mdt/fields/Field_API__c.field-meta.xml
<CustomField>
    <fullName>Field_API__c</fullName>
    <label>Field API</label>
    <type>TextArea</type>
</CustomField>