force-app/main/default/objects/Object_Field_Config__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <type>TextArea</type>
</CustomField>